--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "otium-dev",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "homepage": "https://otium.dev/",
   "type": "module",
   "scripts": {
+    "start": "ts-node server.ts",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -13,6 +14,7 @@
   "dependencies": {
     "@mui/material": "^5.14.13",
     "axios": "^1.5.1",
+    "@types/express": "^4.17.17",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "path": "^0.12.7",
@@ -30,6 +32,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "pm2": "^5.3.0"
   }
 }
